move to spring-boot 3.5.4